ProjetoBase/compilador.output
Terminals unused in grammar

    LABEL
    TYPE
    ARRAY
    OF
    FUNCTION
    GOTO


State 31 conflicts: 2 shift/reduce
State 48 conflicts: 2 shift/reduce
State 50 conflicts: 2 shift/reduce
State 51 conflicts: 4 shift/reduce
State 52 conflicts: 4 shift/reduce
State 53 conflicts: 4 shift/reduce
State 57 conflicts: 9 shift/reduce
State 58 conflicts: 3 shift/reduce
State 63 conflicts: 2 shift/reduce
State 77 conflicts: 3 shift/reduce
State 78 conflicts: 3 shift/reduce
State 81 conflicts: 6 shift/reduce
State 82 conflicts: 6 shift/reduce
State 83 conflicts: 6 shift/reduce
State 84 conflicts: 6 shift/reduce
State 85 conflicts: 6 shift/reduce
State 86 conflicts: 6 shift/reduce
State 87 conflicts: 4 shift/reduce
State 88 conflicts: 4 shift/reduce
State 89 conflicts: 4 shift/reduce
State 90 conflicts: 4 shift/reduce
State 91 conflicts: 4 shift/reduce
State 92 conflicts: 4 shift/reduce
State 97 conflicts: 6 shift/reduce
State 107 conflicts: 2 shift/reduce
State 112 conflicts: 3 shift/reduce
State 113 conflicts: 3 shift/reduce
State 114 conflicts: 3 shift/reduce
State 115 conflicts: 3 shift/reduce
State 116 conflicts: 3 shift/reduce
State 117 conflicts: 3 shift/reduce
State 118 conflicts: 3 shift/reduce
State 119 conflicts: 3 shift/reduce
State 120 conflicts: 3 shift/reduce
State 125 conflicts: 6 shift/reduce, 3 reduce/reduce


Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 bloco: parte_declara_vars parte_declara_algo_ou_nada comando_composto

    4 $@2: %empty

    5 parte_declara_algo_ou_nada: $@2 parte_declara_funcoes_ou_procedimentos
    6                           | %empty

    7 parte_declara_funcoes_ou_procedimentos: declara_procedimento PONTO_E_VIRGULA

    8 $@3: %empty

    9 $@4: %empty

   10 $@5: %empty

   11 declara_procedimento: PROCEDURE $@3 IDENT $@4 tem_parametro_ou_nada PONTO_E_VIRGULA $@5 bloco

   12 tem_parametro_ou_nada: %empty

   13 parte_declara_vars: var

   14 $@6: %empty

   15 var: $@6 VAR declara_vars
   16    | %empty

   17 declara_vars: declara_vars declara_var
   18             | declara_var

   19 $@7: %empty

   20 $@8: %empty

   21 declara_var: $@7 lista_id_var DOIS_PONTOS tipo $@8 PONTO_E_VIRGULA

   22 tipo: IDENT

   23 lista_id_var: lista_id_var VIRGULA IDENT
   24             | IDENT

   25 lista_idents: lista_idents VIRGULA IDENT
   26             | IDENT

   27 comando_composto: T_BEGIN comandos ponto_e_virgula_ou_vazio T_END

   28 comandos: comandos PONTO_E_VIRGULA comando
   29         | comando

   30 ponto_e_virgula_ou_vazio: PONTO_E_VIRGULA
   31                         | %empty

   32 $@9: %empty

   33 comando: variavel_atribuicao $@9 atribuicao_ou_procedimento
   34        | comando_composto
   35        | comando_repetitivo
   36        | comando_condicional
   37        | read
   38        | write

   39 comando_condicional: parte_if_then parte_else
   40                    | parte_if_then

   41 $@10: %empty

   42 $@11: %empty

   43 parte_if_then: IF expressao $@10 THEN $@11 comando

   44 parte_else: ELSE comando

   45 read: READ ABRE_PARENTESES le_idents FECHA_PARENTESES

   46 le_idents: le_idents VIRGULA variavel
   47          | variavel

   48 write: WRITE ABRE_PARENTESES escreve_expressoes FECHA_PARENTESES

   49 escreve_expressoes: escreve_expressoes VIRGULA expressao
   50                   | expressao

   51 $@12: %empty

   52 $@13: %empty

   53 comando_repetitivo: WHILE $@12 expressao $@13 DO comando

   54 variavel_atribuicao: IDENT

   55 atribuicao_ou_procedimento: atribuicao
   56                           | chama_procedimento

   57 $@14: %empty

   58 chama_procedimento: $@14 lista_expressoes_ou_nada

   59 lista_expressoes_ou_nada: %empty

   60 atribuicao: ATRIBUICAO lista_expressoes

   61 lista_expressoes: lista_expressoes expressao
   62                 | expressao

   63 expressao: expressao_simples MENOR_IGUAL expressao_simples
   64          | expressao_simples MAIOR_IGUAL expressao_simples
   65          | expressao_simples MENOR expressao_simples
   66          | expressao_simples MAIOR expressao_simples
   67          | expressao_simples IGUAL expressao_simples
   68          | expressao_simples DIFERENTE expressao_simples
   69          | expressao_simples

   70 expressao_simples: expressao_simples MAIS termo
   71                  | expressao_simples MENOS termo
   72                  | expressao_simples OR termo
   73                  | MAIS termo
   74                  | MENOS termo
   75                  | termo

   76 termo: termo MULTI fator
   77      | termo DIV fator
   78      | termo AND fator
   79      | fator

   80 fator: variavel
   81      | NOT fator
   82      | numero
   83      | chamada_funcao
   84      | ABRE_PARENTESES expressao FECHA_PARENTESES

   85 variavel: IDENT

   86 numero: NUMERO

   87 chamada_funcao: %empty


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    ABRE_PARENTESES (259) 2 45 48 84
    FECHA_PARENTESES (260) 2 45 48 84
    VIRGULA (261) 23 25 46 49
    PONTO_E_VIRGULA (262) 2 7 11 21 28 30
    DOIS_PONTOS (263) 21
    PONTO (264) 2
    T_BEGIN (265) 27
    T_END (266) 27
    VAR (267) 15
    ATRIBUICAO (268) 60
    WRITE (269) 48
    READ (270) 45
    LABEL (271)
    TYPE (272)
    ARRAY (273)
    OF (274)
    PROCEDURE (275) 11
    FUNCTION (276)
    GOTO (277)
    IF (278) 43
    THEN (279) 43
    ELSE (280) 44
    WHILE (281) 53
    DO (282) 53
    IGUAL (283) 67
    DIFERENTE (284) 68
    MENOR_IGUAL (285) 63
    MAIOR_IGUAL (286) 64
    MENOR (287) 65
    MAIOR (288) 66
    MAIS (289) 70 73
    MENOS (290) 71 74
    OR (291) 72
    MULTI (292) 76
    DIV (293) 77
    AND (294) 78
    NOT (295) 81
    NUMERO (296) 86
    IDENT (297) 2 11 22 23 24 25 26 54 85
    LOWER_THAN_ELSE (298)


Nonterminals, with rules where they appear

    $accept (44)
        on left: 0
    programa (45)
        on left: 2
        on right: 0
    $@1 (46)
        on left: 1
        on right: 2
    bloco (47)
        on left: 3
        on right: 2 11
    parte_declara_algo_ou_nada (48)
        on left: 5 6
        on right: 3
    $@2 (49)
        on left: 4
        on right: 5
    parte_declara_funcoes_ou_procedimentos (50)
        on left: 7
        on right: 5
    declara_procedimento (51)
        on left: 11
        on right: 7
    $@3 (52)
        on left: 8
        on right: 11
    $@4 (53)
        on left: 9
        on right: 11
    $@5 (54)
        on left: 10
        on right: 11
    tem_parametro_ou_nada (55)
        on left: 12
        on right: 11
    parte_declara_vars (56)
        on left: 13
        on right: 3
    var (57)
        on left: 15 16
        on right: 13
    $@6 (58)
        on left: 14
        on right: 15
    declara_vars (59)
        on left: 17 18
        on right: 15 17
    declara_var (60)
        on left: 21
        on right: 17 18
    $@7 (61)
        on left: 19
        on right: 21
    $@8 (62)
        on left: 20
        on right: 21
    tipo (63)
        on left: 22
        on right: 21
    lista_id_var (64)
        on left: 23 24
        on right: 21 23
    lista_idents (65)
        on left: 25 26
        on right: 2 25
    comando_composto (66)
        on left: 27
        on right: 3 34
    comandos (67)
        on left: 28 29
        on right: 27 28
    ponto_e_virgula_ou_vazio (68)
        on left: 30 31
        on right: 27
    comando (69)
        on left: 33 34 35 36 37 38
        on right: 28 29 43 44 53
    $@9 (70)
        on left: 32
        on right: 33
    comando_condicional (71)
        on left: 39 40
        on right: 36
    parte_if_then (72)
        on left: 43
        on right: 39 40
    $@10 (73)
        on left: 41
        on right: 43
    $@11 (74)
        on left: 42
        on right: 43
    parte_else (75)
        on left: 44
        on right: 39
    read (76)
        on left: 45
        on right: 37
    le_idents (77)
        on left: 46 47
        on right: 45 46
    write (78)
        on left: 48
        on right: 38
    escreve_expressoes (79)
        on left: 49 50
        on right: 48 49
    comando_repetitivo (80)
        on left: 53
        on right: 35
    $@12 (81)
        on left: 51
        on right: 53
    $@13 (82)
        on left: 52
        on right: 53
    variavel_atribuicao (83)
        on left: 54
        on right: 33
    atribuicao_ou_procedimento (84)
        on left: 55 56
        on right: 33
    chama_procedimento (85)
        on left: 58
        on right: 56
    $@14 (86)
        on left: 57
        on right: 58
    lista_expressoes_ou_nada (87)
        on left: 59
        on right: 58
    atribuicao (88)
        on left: 60
        on right: 55
    lista_expressoes (89)
        on left: 61 62
        on right: 60 61
    expressao (90)
        on left: 63 64 65 66 67 68 69
        on right: 43 49 50 53 61 62 84
    expressao_simples (91)
        on left: 70 71 72 73 74 75
        on right: 63 64 65 66 67 68 69 70 71 72
    termo (92)
        on left: 76 77 78 79
        on right: 70 71 72 73 74 75 76 77 78
    fator (93)
        on left: 80 81 82 83 84
        on right: 76 77 78 79 81
    variavel (94)
        on left: 85
        on right: 46 47 80
    numero (95)
        on left: 86
        on right: 82
    chamada_funcao (96)
        on left: 87
        on right: 83


State 0

    0 $accept: . programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


State 2

    2 programa: $@1 . PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  shift, and go to state 4


State 3

    0 $accept: programa $end .

    $default  accept


State 4

    2 programa: $@1 PROGRAM . IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 5


State 5

    2 programa: $@1 PROGRAM IDENT . ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  shift, and go to state 6


State 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES . lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 7

    lista_idents  go to state 8


State 7

   26 lista_idents: IDENT .

    $default  reduce using rule 26 (lista_idents)


State 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents . FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   25 lista_idents: lista_idents . VIRGULA IDENT

    FECHA_PARENTESES  shift, and go to state 9
    VIRGULA           shift, and go to state 10


State 9

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES . PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 11


State 10

   25 lista_idents: lista_idents VIRGULA . IDENT

    IDENT  shift, and go to state 12


State 11

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA . bloco PONTO

    VAR       reduce using rule 14 ($@6)
    $default  reduce using rule 16 (var)

    bloco               go to state 13
    parte_declara_vars  go to state 14
    var                 go to state 15
    $@6                 go to state 16


State 12

   25 lista_idents: lista_idents VIRGULA IDENT .

    $default  reduce using rule 25 (lista_idents)


State 13

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco . PONTO

    PONTO  shift, and go to state 17


State 14

    3 bloco: parte_declara_vars . parte_declara_algo_ou_nada comando_composto

    T_BEGIN   reduce using rule 6 (parte_declara_algo_ou_nada)
    $default  reduce using rule 4 ($@2)

    parte_declara_algo_ou_nada  go to state 18
    $@2                         go to state 19


State 15

   13 parte_declara_vars: var .

    $default  reduce using rule 13 (parte_declara_vars)


State 16

   15 var: $@6 . VAR declara_vars

    VAR  shift, and go to state 20


State 17

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO .

    $default  reduce using rule 2 (programa)


State 18

    3 bloco: parte_declara_vars parte_declara_algo_ou_nada . comando_composto

    T_BEGIN  shift, and go to state 21

    comando_composto  go to state 22


State 19

    5 parte_declara_algo_ou_nada: $@2 . parte_declara_funcoes_ou_procedimentos

    PROCEDURE  shift, and go to state 23

    parte_declara_funcoes_ou_procedimentos  go to state 24
    declara_procedimento                    go to state 25


State 20

   15 var: $@6 VAR . declara_vars

    $default  reduce using rule 19 ($@7)

    declara_vars  go to state 26
    declara_var   go to state 27
    $@7           go to state 28


State 21

   27 comando_composto: T_BEGIN . comandos ponto_e_virgula_ou_vazio T_END

    T_BEGIN  shift, and go to state 21
    WRITE    shift, and go to state 29
    READ     shift, and go to state 30
    IF       shift, and go to state 31
    WHILE    shift, and go to state 32
    IDENT    shift, and go to state 33

    comando_composto     go to state 34
    comandos             go to state 35
    comando              go to state 36
    comando_condicional  go to state 37
    parte_if_then        go to state 38
    read                 go to state 39
    write                go to state 40
    comando_repetitivo   go to state 41
    variavel_atribuicao  go to state 42


State 22

    3 bloco: parte_declara_vars parte_declara_algo_ou_nada comando_composto .

    $default  reduce using rule 3 (bloco)


State 23

   11 declara_procedimento: PROCEDURE . $@3 IDENT $@4 tem_parametro_ou_nada PONTO_E_VIRGULA $@5 bloco

    $default  reduce using rule 8 ($@3)

    $@3  go to state 43


State 24

    5 parte_declara_algo_ou_nada: $@2 parte_declara_funcoes_ou_procedimentos .

    $default  reduce using rule 5 (parte_declara_algo_ou_nada)


State 25

    7 parte_declara_funcoes_ou_procedimentos: declara_procedimento . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 44


State 26

   15 var: $@6 VAR declara_vars .
   17 declara_vars: declara_vars . declara_var

    IDENT     reduce using rule 19 ($@7)
    $default  reduce using rule 15 (var)

    declara_var  go to state 45
    $@7          go to state 28


State 27

   18 declara_vars: declara_var .

    $default  reduce using rule 18 (declara_vars)


State 28

   21 declara_var: $@7 . lista_id_var DOIS_PONTOS tipo $@8 PONTO_E_VIRGULA

    IDENT  shift, and go to state 46

    lista_id_var  go to state 47


State 29

   48 write: WRITE . ABRE_PARENTESES escreve_expressoes FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 48


State 30

   45 read: READ . ABRE_PARENTESES le_idents FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 49


State 31

   43 parte_if_then: IF . expressao $@10 THEN $@11 comando

    ABRE_PARENTESES  shift, and go to state 50
    MAIS             shift, and go to state 51
    MENOS            shift, and go to state 52
    NOT              shift, and go to state 53
    NUMERO           shift, and go to state 54
    IDENT            shift, and go to state 55

    MAIS      [reduce using rule 87 (chamada_funcao)]
    MENOS     [reduce using rule 87 (chamada_funcao)]
    $default  reduce using rule 87 (chamada_funcao)

    expressao          go to state 56
    expressao_simples  go to state 57
    termo              go to state 58
    fator              go to state 59
    variavel           go to state 60
    numero             go to state 61
    chamada_funcao     go to state 62


State 32

   53 comando_repetitivo: WHILE . $@12 expressao $@13 DO comando

    $default  reduce using rule 51 ($@12)

    $@12  go to state 63


State 33

   54 variavel_atribuicao: IDENT .

    $default  reduce using rule 54 (variavel_atribuicao)


State 34

   34 comando: comando_composto .

    $default  reduce using rule 34 (comando)


State 35

   27 comando_composto: T_BEGIN comandos . ponto_e_virgula_ou_vazio T_END
   28 comandos: comandos . PONTO_E_VIRGULA comando

    PONTO_E_VIRGULA  shift, and go to state 64

    $default  reduce using rule 31 (ponto_e_virgula_ou_vazio)

    ponto_e_virgula_ou_vazio  go to state 65


State 36

   29 comandos: comando .

    $default  reduce using rule 29 (comandos)


State 37

   36 comando: comando_condicional .

    $default  reduce using rule 36 (comando)


State 38

   39 comando_condicional: parte_if_then . parte_else
   40                    | parte_if_then .

    ELSE  shift, and go to state 66

    $default  reduce using rule 40 (comando_condicional)

    parte_else  go to state 67


State 39

   37 comando: read .

    $default  reduce using rule 37 (comando)


State 40

   38 comando: write .

    $default  reduce using rule 38 (comando)


State 41

   35 comando: comando_repetitivo .

    $default  reduce using rule 35 (comando)


State 42

   33 comando: variavel_atribuicao . $@9 atribuicao_ou_procedimento

    $default  reduce using rule 32 ($@9)

    $@9  go to state 68


State 43

   11 declara_procedimento: PROCEDURE $@3 . IDENT $@4 tem_parametro_ou_nada PONTO_E_VIRGULA $@5 bloco

    IDENT  shift, and go to state 69


State 44

    7 parte_declara_funcoes_ou_procedimentos: declara_procedimento PONTO_E_VIRGULA .

    $default  reduce using rule 7 (parte_declara_funcoes_ou_procedimentos)


State 45

   17 declara_vars: declara_vars declara_var .

    $default  reduce using rule 17 (declara_vars)


State 46

   24 lista_id_var: IDENT .

    $default  reduce using rule 24 (lista_id_var)


State 47

   21 declara_var: $@7 lista_id_var . DOIS_PONTOS tipo $@8 PONTO_E_VIRGULA
   23 lista_id_var: lista_id_var . VIRGULA IDENT

    VIRGULA      shift, and go to state 70
    DOIS_PONTOS  shift, and go to state 71


State 48

   48 write: WRITE ABRE_PARENTESES . escreve_expressoes FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 50
    MAIS             shift, and go to state 51
    MENOS            shift, and go to state 52
    NOT              shift, and go to state 53
    NUMERO           shift, and go to state 54
    IDENT            shift, and go to state 55

    MAIS      [reduce using rule 87 (chamada_funcao)]
    MENOS     [reduce using rule 87 (chamada_funcao)]
    $default  reduce using rule 87 (chamada_funcao)

    escreve_expressoes  go to state 72
    expressao           go to state 73
    expressao_simples   go to state 57
    termo               go to state 58
    fator               go to state 59
    variavel            go to state 60
    numero              go to state 61
    chamada_funcao      go to state 62


State 49

   45 read: READ ABRE_PARENTESES . le_idents FECHA_PARENTESES

    IDENT  shift, and go to state 55

    le_idents  go to state 74
    variavel   go to state 75


State 50

   84 fator: ABRE_PARENTESES . expressao FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 50
    MAIS             shift, and go to state 51
    MENOS            shift, and go to state 52
    NOT              shift, and go to state 53
    NUMERO           shift, and go to state 54
    IDENT            shift, and go to state 55

    MAIS      [reduce using rule 87 (chamada_funcao)]
    MENOS     [reduce using rule 87 (chamada_funcao)]
    $default  reduce using rule 87 (chamada_funcao)

    expressao          go to state 76
    expressao_simples  go to state 57
    termo              go to state 58
    fator              go to state 59
    variavel           go to state 60
    numero             go to state 61
    chamada_funcao     go to state 62


State 51

   73 expressao_simples: MAIS . termo

    ABRE_PARENTESES  shift, and go to state 50
    NOT              shift, and go to state 53
    NUMERO           shift, and go to state 54
    IDENT            shift, and go to state 55

    ABRE_PARENTESES  [reduce using rule 87 (chamada_funcao)]
    NOT              [reduce using rule 87 (chamada_funcao)]
    NUMERO           [reduce using rule 87 (chamada_funcao)]
    IDENT            [reduce using rule 87 (chamada_funcao)]
    $default         reduce using rule 87 (chamada_funcao)

    termo           go to state 77
    fator           go to state 59
    variavel        go to state 60
    numero          go to state 61
    chamada_funcao  go to state 62


State 52

   74 expressao_simples: MENOS . termo

    ABRE_PARENTESES  shift, and go to state 50
    NOT              shift, and go to state 53
    NUMERO           shift, and go to state 54
    IDENT            shift, and go to state 55

    ABRE_PARENTESES  [reduce using rule 87 (chamada_funcao)]
    NOT              [reduce using rule 87 (chamada_funcao)]
    NUMERO           [reduce using rule 87 (chamada_funcao)]
    IDENT            [reduce using rule 87 (chamada_funcao)]
    $default         reduce using rule 87 (chamada_funcao)

    termo           go to state 78
    fator           go to state 59
    variavel        go to state 60
    numero          go to state 61
    chamada_funcao  go to state 62


State 53

   81 fator: NOT . fator

    ABRE_PARENTESES  shift, and go to state 50
    NOT              shift, and go to state 53
    NUMERO           shift, and go to state 54
    IDENT            shift, and go to state 55

    ABRE_PARENTESES  [reduce using rule 87 (chamada_funcao)]
    NOT              [reduce using rule 87 (chamada_funcao)]
    NUMERO           [reduce using rule 87 (chamada_funcao)]
    IDENT            [reduce using rule 87 (chamada_funcao)]
    $default         reduce using rule 87 (chamada_funcao)

    fator           go to state 79
    variavel        go to state 60
    numero          go to state 61
    chamada_funcao  go to state 62


State 54

   86 numero: NUMERO .

    $default  reduce using rule 86 (numero)


State 55

   85 variavel: IDENT .

    $default  reduce using rule 85 (variavel)


State 56

   43 parte_if_then: IF expressao . $@10 THEN $@11 comando

    $default  reduce using rule 41 ($@10)

    $@10  go to state 80


State 57

   63 expressao: expressao_simples . MENOR_IGUAL expressao_simples
   64          | expressao_simples . MAIOR_IGUAL expressao_simples
   65          | expressao_simples . MENOR expressao_simples
   66          | expressao_simples . MAIOR expressao_simples
   67          | expressao_simples . IGUAL expressao_simples
   68          | expressao_simples . DIFERENTE expressao_simples
   69          | expressao_simples .
   70 expressao_simples: expressao_simples . MAIS termo
   71                  | expressao_simples . MENOS termo
   72                  | expressao_simples . OR termo

    IGUAL        shift, and go to state 81
    DIFERENTE    shift, and go to state 82
    MENOR_IGUAL  shift, and go to state 83
    MAIOR_IGUAL  shift, and go to state 84
    MENOR        shift, and go to state 85
    MAIOR        shift, and go to state 86
    MAIS         shift, and go to state 87
    MENOS        shift, and go to state 88
    OR           shift, and go to state 89

    IGUAL        [reduce using rule 69 (expressao)]
    DIFERENTE    [reduce using rule 69 (expressao)]
    MENOR_IGUAL  [reduce using rule 69 (expressao)]
    MAIOR_IGUAL  [reduce using rule 69 (expressao)]
    MENOR        [reduce using rule 69 (expressao)]
    MAIOR        [reduce using rule 69 (expressao)]
    MAIS         [reduce using rule 69 (expressao)]
    MENOS        [reduce using rule 69 (expressao)]
    OR           [reduce using rule 69 (expressao)]
    $default     reduce using rule 69 (expressao)


State 58

   75 expressao_simples: termo .
   76 termo: termo . MULTI fator
   77      | termo . DIV fator
   78      | termo . AND fator

    MULTI  shift, and go to state 90
    DIV    shift, and go to state 91
    AND    shift, and go to state 92

    MULTI     [reduce using rule 75 (expressao_simples)]
    DIV       [reduce using rule 75 (expressao_simples)]
    AND       [reduce using rule 75 (expressao_simples)]
    $default  reduce using rule 75 (expressao_simples)


State 59

   79 termo: fator .

    $default  reduce using rule 79 (termo)


State 60

   80 fator: variavel .

    $default  reduce using rule 80 (fator)


State 61

   82 fator: numero .

    $default  reduce using rule 82 (fator)


State 62

   83 fator: chamada_funcao .

    $default  reduce using rule 83 (fator)


State 63

   53 comando_repetitivo: WHILE $@12 . expressao $@13 DO comando

    ABRE_PARENTESES  shift, and go to state 50
    MAIS             shift, and go to state 51
    MENOS            shift, and go to state 52
    NOT              shift, and go to state 53
    NUMERO           shift, and go to state 54
    IDENT            shift, and go to state 55

    MAIS      [reduce using rule 87 (chamada_funcao)]
    MENOS     [reduce using rule 87 (chamada_funcao)]
    $default  reduce using rule 87 (chamada_funcao)

    expressao          go to state 93
    expressao_simples  go to state 57
    termo              go to state 58
    fator              go to state 59
    variavel           go to state 60
    numero             go to state 61
    chamada_funcao     go to state 62


State 64

   28 comandos: comandos PONTO_E_VIRGULA . comando
   30 ponto_e_virgula_ou_vazio: PONTO_E_VIRGULA .

    T_BEGIN  shift, and go to state 21
    WRITE    shift, and go to state 29
    READ     shift, and go to state 30
    IF       shift, and go to state 31
    WHILE    shift, and go to state 32
    IDENT    shift, and go to state 33

    $default  reduce using rule 30 (ponto_e_virgula_ou_vazio)

    comando_composto     go to state 34
    comando              go to state 94
    comando_condicional  go to state 37
    parte_if_then        go to state 38
    read                 go to state 39
    write                go to state 40
    comando_repetitivo   go to state 41
    variavel_atribuicao  go to state 42


State 65

   27 comando_composto: T_BEGIN comandos ponto_e_virgula_ou_vazio . T_END

    T_END  shift, and go to state 95


State 66

   44 parte_else: ELSE . comando

    T_BEGIN  shift, and go to state 21
    WRITE    shift, and go to state 29
    READ     shift, and go to state 30
    IF       shift, and go to state 31
    WHILE    shift, and go to state 32
    IDENT    shift, and go to state 33

    comando_composto     go to state 34
    comando              go to state 96
    comando_condicional  go to state 37
    parte_if_then        go to state 38
    read                 go to state 39
    write                go to state 40
    comando_repetitivo   go to state 41
    variavel_atribuicao  go to state 42


State 67

   39 comando_condicional: parte_if_then parte_else .

    $default  reduce using rule 39 (comando_condicional)


State 68

   33 comando: variavel_atribuicao $@9 . atribuicao_ou_procedimento

    ATRIBUICAO  shift, and go to state 97

    $default  reduce using rule 57 ($@14)

    atribuicao_ou_procedimento  go to state 98
    chama_procedimento          go to state 99
    $@14                        go to state 100
    atribuicao                  go to state 101


State 69

   11 declara_procedimento: PROCEDURE $@3 IDENT . $@4 tem_parametro_ou_nada PONTO_E_VIRGULA $@5 bloco

    $default  reduce using rule 9 ($@4)

    $@4  go to state 102


State 70

   23 lista_id_var: lista_id_var VIRGULA . IDENT

    IDENT  shift, and go to state 103


State 71

   21 declara_var: $@7 lista_id_var DOIS_PONTOS . tipo $@8 PONTO_E_VIRGULA

    IDENT  shift, and go to state 104

    tipo  go to state 105


State 72

   48 write: WRITE ABRE_PARENTESES escreve_expressoes . FECHA_PARENTESES
   49 escreve_expressoes: escreve_expressoes . VIRGULA expressao

    FECHA_PARENTESES  shift, and go to state 106
    VIRGULA           shift, and go to state 107


State 73

   50 escreve_expressoes: expressao .

    $default  reduce using rule 50 (escreve_expressoes)


State 74

   45 read: READ ABRE_PARENTESES le_idents . FECHA_PARENTESES
   46 le_idents: le_idents . VIRGULA variavel

    FECHA_PARENTESES  shift, and go to state 108
    VIRGULA           shift, and go to state 109


State 75

   47 le_idents: variavel .

    $default  reduce using rule 47 (le_idents)


State 76

   84 fator: ABRE_PARENTESES expressao . FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 110


State 77

   73 expressao_simples: MAIS termo .
   76 termo: termo . MULTI fator
   77      | termo . DIV fator
   78      | termo . AND fator

    MULTI  shift, and go to state 90
    DIV    shift, and go to state 91
    AND    shift, and go to state 92

    MULTI     [reduce using rule 73 (expressao_simples)]
    DIV       [reduce using rule 73 (expressao_simples)]
    AND       [reduce using rule 73 (expressao_simples)]
    $default  reduce using rule 73 (expressao_simples)


State 78

   74 expressao_simples: MENOS termo .
   76 termo: termo . MULTI fator
   77      | termo . DIV fator
   78      | termo . AND fator

    MULTI  shift, and go to state 90
    DIV    shift, and go to state 91
    AND    shift, and go to state 92

    MULTI     [reduce using rule 74 (expressao_simples)]
    DIV       [reduce using rule 74 (expressao_simples)]
    AND       [reduce using rule 74 (expressao_simples)]
    $default  reduce using rule 74 (expressao_simples)


State 79

   81 fator: NOT fator .

    $default  reduce using rule 81 (fator)


State 80

   43 parte_if_then: IF expressao $@10 . THEN $@11 comando

    THEN  shift, and go to state 111


State 81

   67 expressao: expressao_simples IGUAL . expressao_simples

    ABRE_PARENTESES  shift, and go to state 50
    MAIS             shift, and go to state 51
    MENOS            shift, and go to state 52
    NOT              shift, and go to state 53
    NUMERO           shift, and go to state 54
    IDENT            shift, and go to state 55

    ABRE_PARENTESES  [reduce using rule 87 (chamada_funcao)]
    MAIS             [reduce using rule 87 (chamada_funcao)]
    MENOS            [reduce using rule 87 (chamada_funcao)]
    NOT              [reduce using rule 87 (chamada_funcao)]
    NUMERO           [reduce using rule 87 (chamada_funcao)]
    IDENT            [reduce using rule 87 (chamada_funcao)]
    $default         reduce using rule 87 (chamada_funcao)

    expressao_simples  go to state 112
    termo              go to state 58
    fator              go to state 59
    variavel           go to state 60
    numero             go to state 61
    chamada_funcao     go to state 62


State 82

   68 expressao: expressao_simples DIFERENTE . expressao_simples

    ABRE_PARENTESES  shift, and go to state 50
    MAIS             shift, and go to state 51
    MENOS            shift, and go to state 52
    NOT              shift, and go to state 53
    NUMERO           shift, and go to state 54
    IDENT            shift, and go to state 55

    ABRE_PARENTESES  [reduce using rule 87 (chamada_funcao)]
    MAIS             [reduce using rule 87 (chamada_funcao)]
    MENOS            [reduce using rule 87 (chamada_funcao)]
    NOT              [reduce using rule 87 (chamada_funcao)]
    NUMERO           [reduce using rule 87 (chamada_funcao)]
    IDENT            [reduce using rule 87 (chamada_funcao)]
    $default         reduce using rule 87 (chamada_funcao)

    expressao_simples  go to state 113
    termo              go to state 58
    fator              go to state 59
    variavel           go to state 60
    numero             go to state 61
    chamada_funcao     go to state 62


State 83

   63 expressao: expressao_simples MENOR_IGUAL . expressao_simples

    ABRE_PARENTESES  shift, and go to state 50
    MAIS             shift, and go to state 51
    MENOS            shift, and go to state 52
    NOT              shift, and go to state 53
    NUMERO           shift, and go to state 54
    IDENT            shift, and go to state 55

    ABRE_PARENTESES  [reduce using rule 87 (chamada_funcao)]
    MAIS             [reduce using rule 87 (chamada_funcao)]
    MENOS            [reduce using rule 87 (chamada_funcao)]
    NOT              [reduce using rule 87 (chamada_funcao)]
    NUMERO           [reduce using rule 87 (chamada_funcao)]
    IDENT            [reduce using rule 87 (chamada_funcao)]
    $default         reduce using rule 87 (chamada_funcao)

    expressao_simples  go to state 114
    termo              go to state 58
    fator              go to state 59
    variavel           go to state 60
    numero             go to state 61
    chamada_funcao     go to state 62


State 84

   64 expressao: expressao_simples MAIOR_IGUAL . expressao_simples

    ABRE_PARENTESES  shift, and go to state 50
    MAIS             shift, and go to state 51
    MENOS            shift, and go to state 52
    NOT              shift, and go to state 53
    NUMERO           shift, and go to state 54
    IDENT            shift, and go to state 55

    ABRE_PARENTESES  [reduce using rule 87 (chamada_funcao)]
    MAIS             [reduce using rule 87 (chamada_funcao)]
    MENOS            [reduce using rule 87 (chamada_funcao)]
    NOT              [reduce using rule 87 (chamada_funcao)]
    NUMERO           [reduce using rule 87 (chamada_funcao)]
    IDENT            [reduce using rule 87 (chamada_funcao)]
    $default         reduce using rule 87 (chamada_funcao)

    expressao_simples  go to state 115
    termo              go to state 58
    fator              go to state 59
    variavel           go to state 60
    numero             go to state 61
    chamada_funcao     go to state 62


State 85

   65 expressao: expressao_simples MENOR . expressao_simples

    ABRE_PARENTESES  shift, and go to state 50
    MAIS             shift, and go to state 51
    MENOS            shift, and go to state 52
    NOT              shift, and go to state 53
    NUMERO           shift, and go to state 54
    IDENT            shift, and go to state 55
